# dotfiles

./: .bash_aliases  .bashrc  .gemrc  .gitconfig  .gitignore  .gitmodules  .gnome-terminal-conf.xml  .rdebugrc  .tmux.conf  .vimrc  Makefile  README.md  TODO  Xkbmap  bash_aliases  bash_functions  bash_prompt  bashrc  ctags  gitconfig  gitignore  gnome-terminal-conf.xml  install.rb  install.sh  test.sh  tmux.conf  vimrc  xmobarrc  xprofile
.bundle/: config
bundle/: config
cabal/: config
clojure/: deps.edn
config/alacritty/: alacritty.yml
config/albert/: albert.conf
config/clojure-lsp/: config.edn
config/hyper/: hyper.js
config/kitty/: diff.conf  kitty.conf  zoom_toogle.py
config/nvim/: coc-settings.json  init.vim
config/powerline/: colors.json  config.json  powerline
config/powerline/colorschemes/shell/: grama.json  the_saints.json
config/powerline/themes/: powerline.json
config/powerline/themes/shell/: custom.json
config/powerline/themes/tmux/: custom.json
config/xmonad/: build  config.hs  stack.yaml  xephyr.sh  xmobarrc  xmonad-testing.cabal  xmonad.hs
hooks/post-up/: 01-arch-packages  02-vim-plug  10-touch-private
lein/: profiles.clj
lein/profiles.d/: base.clj
local/python-libs/: python-libs
local/python-libs/powerline_extensions/segments/: email.py
powerline-configs/: config.json
powerline-configs/themes/shell/: default.json
powerline-configs/themes/tmux/: custom.json
python-libs/powerline_extensions/segments/: email.py  git.py  rbenv.py
stack/: config.yaml
vim/: coc-settings.json  settings.json
xmonad/: xmonad.hs
