------------------------------------------------------------------------------
name:          xmonad-testing
version:       0.13
synopsis:      XMonad Testing Repository
homepage:      http://xmonad.org
license:       BSD2
license-file:  LICENSE
author:        Peter Jones <pjones@devalot.com>
maintainer:    Peter Jones <pjones@devalot.com>
copyright:     Copyright (c) 2016,2017 Peter J. Jones
category:      Graphics
build-type:    Simple
cabal-version: 1.12

------------------------------------------------------------------------------
executable xmonad-testing
  main-is: config.hs
  ghc-options: -Wall -Werror -fno-warn-missing-signatures -threaded -rtsopts -with-rtsopts=-N
  build-depends: base, xmonad, xmonad-contrib
  default-language: Haskell2010
